--- a/style.css
+++ b/style.css
@@ -6,7 +6,8 @@
 
 .container {
     display: grid;
-    grid-template: 1fr 3fr / 0.8fr 3.2fr;
+    grid-template: 27vh 73vh / 0.8fr 3.2fr;
+    height: 100%;
 }
 
 .sidebar {
@@ -15,6 +16,7 @@
     grid-row-end: 2;
     display: grid;
     grid-template-columns: 1fr 3fr;
+    height: 1188px;
 }
 
 .sidebar div {
@@ -61,19 +63,221 @@
 }
 
 .sidebar p {
-    font-size: 18px;
+    font-size: 20px;
     color: white;
     font-weight: bold;
 }
 
 .header {
-    background-color: lightgoldenrodyellow;
+    background-color: white;
     grid-column: 2;
     grid-row: 1;
 }
 
+.headerTop {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    padding: 20px;
+    margin-left: 20px;
+}
+
+.headerTop img {
+    width: 30px;
+    height: 30px;
+    margin-right: 20px;
+}
+
+.searchBar {
+    background-color: #e5e5e5;
+    width: 600px;
+    height: 30px;
+    border-radius: 20px;
+    margin-right: 250px;
+}
+
+.headerTop img[src="./icons/hutaomcd.webp"] {
+    width: 55px;
+    height: 55px;
+    border-radius: 50%;
+}
+
+.headerTop p {
+    font-size: 20px;
+    font-weight: bold;
+}
+
+.headerBottom {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    margin-left: 40px;
+}
+
+.headerBottom img[src="./icons/hutaomcd.webp"] {
+    width: 80px;
+    height: 80px;
+    border-radius: 50%;
+    margin-right: 20px;
+}
+
+.greeting {
+    font-size: 15px;
+    font-weight: 700;
+}
+
+.username {
+    font-size: 30px;
+    font-weight: 700;
+    margin-right: 390px;
+}
+
+.new, .upload, .share {
+    background-color: #ef4444;
+    border-radius: 20px;
+    height: 45px;
+    width: 110px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    color: white;
+    font-weight: 600;
+    margin-right: 20px;
+}
+
 .main {
-    background-color: darkgrey;
+    background-color: #e5e5e5;
     grid-column: 2;
     grid-row: 2;
+    display: flex;
+    flex-direction: row;
+    height: 1000px;
+}
+
+.mainLeft {
+    display: flex;
+    flex-direction: column;
+    margin: 40px 20px 0px 20px;
+}
+
+.mainLeft p {
+    font-size: 25px;
+    font-weight: 600;
+}
+
+.projects {
+    display: grid;
+    grid-template-columns: repeat(2, minmax(400px, 1fr));
+    grid-gap: 20px;
+}
+
+.card {
+    background-color: white;
+    border-radius: 10px;
+    height: 230px;
+    position: relative;
+    margin-top: 15px;
+    padding: 20px 40px 20px 40px;
+    display: flex;
+    flex-direction: column;
+}
+
+.card::before {
+    content: '';
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 10px;
+    height: 100%;
+    background-color: #fc8181;
+    border-top-left-radius: 10px;
+    border-bottom-left-radius: 10px;
+}
+
+.card-title {
+    font-weight: bold;
+}
+
+.card-content {
+    font-size: 20px !important;
+    color: grey;
+    padding-right: 100px;
+}
+
+.card-icons {
+    width: 30px;
+    height: 30px;
+    display: flex;
+    flex-direction: row;
+    justify-content: right;
+    gap: 30px;
+    position: absolute;
+    bottom: 20px;
+    right: 20px;
+    padding: 20px;
+}
+
+.mainRight {
+    padding: 20px;
+    display: flex;
+    flex-direction: column;
+    gap: 20px;
+    margin-top: 20px;
+}
+
+.right-title {
+    text-align: left;
+    font-weight: 600;
+    font-size: 25px;
+    margin-bottom: -5px;
+}
+
+.sidecard {
+    background-color: white;
+    width: 200px;
+    height: 275px;
+    border-radius: 10px;
+    padding: 40px;
+}
+
+.announcement-title {
+    font-weight: bold;
+}
+
+.announcement-content {
+    font-size: 15px !important;
+    color: grey;
+}
+
+hr {
+    margin: 20px 0px 20px 0px;
+}
+
+.sidecard img {
+    width: 50px;
+    height: 50px;
+    border-radius: 50%;
+}
+
+.trending-group {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    margin-bottom: 25px;
+}
+
+.trending-profile {
+    display: flex;
+    flex-direction: column;
+    justify-content: left;
+    margin-left: 10px;
+}
+
+.trending-user {
+    font-weight: 500;
+}
+
+.trending-project {
+    color: grey;
+    font-weight: 500;
 }
