--- a/style.css
+++ b/style.css
@@ -14,14 +14,15 @@
     background-color: #ef4444;
     grid-row-start: 1;
     grid-row-end: 2;
-    display: grid;
-    grid-template-columns: 1fr 3fr;
     height: 1188px;
 }
 
 .sidebar div {
-    grid-column: 1;
-    padding: 15px;
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    margin: 20px 20px 20px 20px;
+    gap: 20px;
 }
 
 .topicon img {
@@ -35,25 +36,16 @@
 }
 
 .topicon {
-    margin-bottom: 20px;
-    margin-left: 5px !important;
+    margin: 15px 15px 50px 15px !important;
     gap: 10px !important;
 }
 
 .settings {
-    margin-top: 50px;
+    margin-top: 50px !important;
 }
 
 .privacy {
     margin-bottom: 50px;
-}
-
-.sidebar div {
-    display: flex;
-    flex-direction: row;
-    align-items: center;
-    margin-left: 10px;
-    gap: 20px;
 }
 
 .sidebar img {
@@ -279,5 +271,5 @@ hr {
 
 .trending-project {
     color: grey;
-    font-weight: 500;
+    font-weight: 450;
 }
